# Procesamiento-de-imagenes-AOS-vs-SOA

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  binaryio.hpp  info.cpp  info.hpp  progars.cpp  progars.hpp
ftest-aos/: CMakeLists.txt  compress_ftest.cpp  cutfreq_ftest.cpp  maxlevel_ftest.cpp  resize_ftest.cpp
ftest-soa/: CMakeLists.txt  compress_ftest.cpp  cutfreq_ftest.cpp  maxlevel_ftest.cpp  resize_ftest.cpp
imgaos/: CMakeLists.txt  imgeaos.cpp  imgeaos.hpp
imgsoa/: CMakeLists.txt  imgesoa.cpp  imgesoa.hpp
imtool-aos/: main.cpp
imtool-soa/: main.cpp
utest-common/: CMakeLists.txt  info_test.cpp  progars_test.cpp
utest-imgaos/: CMakeLists.txt  compress_unittest.cpp  cutfreq_unittest.cpp  maxlevel_unittest.cpp  resize_unittest.cpp
utest-imgsoa/: CMakeLists.txt  compress_unittest.cpp  cutfreq_unittest.cpp  maxlevel_unittest.cpp  resize_unittest.cpp
